#####################################################################################
#      Copyright 2012 Barcelona Supercomputing Center                               #
#                                                                                   #
#      This file is part of the NANOS++ library.                                    #
#                                                                                   #
#      NANOS++ is free software: you can redistribute it and/or modify              #
#      it under the terms of the GNU Lesser General Public License as published by  #
#      the Free Software Foundation, either version 3 of the License, or            #
#      (at your option) any later version.                                          #
#                                                                                   #
#      NANOS++ is distributed in the hope that it will be useful,                   #
#      but WITHOUT ANY WARRANTY; without even the implied warranty of               #
#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                #
#      GNU Lesser General Public License for more details.                          #
#                                                                                   #
#      You should have received a copy of the GNU Lesser General Public License     #
#      along with NANOS++.  If not, see <http://www.gnu.org/licenses/>.             #
#####################################################################################

cfgsdir = ${datarootdir}/paraver_configs
# ls -1 | sed  -e 's/^\(.*\)$/\t\0\\/g'
nobase_cfgs_DATA = 2dh_total_bandwidth.cfg\
	2dh_who_runs_what.cfg\
	2dp_runtime_calls.cfg\
	2dp_status.cfg\
	2dp_transfer_direction.cfg\
	3dh_duration_runtime_calls.cfg\
	3dh_duration_state.cfg\
	api_bursts.cfg\
	api_time_distribution.cfg\
	bytes_in.cfg\
	bytes_out.cfg\
	cache_bw.cfg\
	cache_bw_function.cfg\
	cache_wait.cfg\
	gpu_arch_state.cfg\
	in_creation.cfg\
	instructions_completed_values.cfg\
	ipc_instructions_completed_ratio.cfg\
	l1d_cache_misses_ratio.cfg\
	l1d_cache_misses_values.cfg\
	l1d_misses_in_running.cfg\
	l2d_cache_misses_ratio.cfg\
	l2d_cache_misses_values.cfg\
	Makefile.am\
	Makefile.in\
	ready_tasks.cfg\
	sampled_functions.cfg\
	sampled_line_functions.cfg\
	send_bw.cfg\
	stalled_cycles.cfg\
	stalled_cycles_ratio.cfg\
	submit_enumeration.cfg\
	task_number.cfg\
	tasks_in_graph.cfg\
	thread_state.cfg\
	thread_substate.cfg\
	total_cycles.cfg\
	total_instructions_in_running.cfg\
	transfer_direction.cfg\
	user_functions.cfg\
	wd_id.cfg


